# VYNE

./: .editorconfig  .env.example  .gitignore  .hintrc  IMPLEMENTATION PLAN.md  Makefile  README.md  VYNE MASTER PLAN.md  VYNE PHASE PROMPTS.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vyne_ui.html
.claude/: settings.local.json
.github/: CODEOWNERS  branch-protection.json
.github/workflows/: backup-verify.yml  (+5 more)
.husky/: pre-commit
docs/: GANTT_IMPLEMENTATION_PLAN.md  LAUNCH_CHECKLIST.md  UI_UPGRADE_PLAN.md
scripts/: apply-branch-protection.sh  db-migrate.sh  init-db.sql  localstack-init.sh  mojibake.mjs  restore-test.sh  seed.sh  setup-env.mjs  setup.sh
services/ai-service/: .vercelignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  vercel.json
services/ai-service/api/: index.py
services/ai-service/src/: config.py  dependencies.py  main.py
services/ai-service/src/agents/: __init__.py  base.py  finance_agent.py  incident_agent.py  infra_agent.py  mock_llm.py  ops_agent.py  orchestrator.py
services/ai-service/src/routers/: agents.py  analyze.py  embeddings.py  search.py
services/ai-service/tests/: test_agents.py  test_orchestrator.py
services/observability-service/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
services/observability-service/src/: __init__.py  config.py  dependencies.py  main.py
services/observability-service/src/db/: schema.sql
services/observability-service/src/routers/: alerts.py  logs.py  metrics.py
services/observability-service/tests/: test_metrics.py
(+1098 files in other folders)
