[project]
name = "vyne-observability-service"
version = "0.1.0"
description = "VYNE Observability Service - Metrics, alerts, and log aggregation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pytest]
asyncio_mode = "auto"
